@@ -98,4 +98,6 @@ $_lang['clientconfig.error.importing_row'] = 'Something went wrong saving a row 
 
 // New 2017-01-31
 $_lang['clientconfig.xtype.password'] = 'Password';
+$_lang['clientconfig.source'] = 'Media Source';
+$_lang['clientconfig.source.desc'] = 'The media source to use for the file browser.';
 
