@@ -10,6 +10,7 @@
 - Add CMD/CTRL + S shortcut for saving the configuration [#80]
 - Preserve linebreaks when editing a setting in the admin section by using a textarea for the value [#69]
 - Relicense under the MIT license instead of GPL [#67]
+- Allow specifying a media source for the image input type [#66]
 
 ++ ClientConfig 1.3.2-pl
 ++ Released on 2015-12-09
